<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Secret Santa Shuffle</string>
    <string name="action_settings">Settings</string>
    <string name="name_header">Participants</string>
    <string name="recipient_header">Recipients</string>
    <string name="chosen_header">Chosen Yet?</string>
    <string name="new_name_hint">Add A Person</string>
    <string name="pair_button">Pair Everyone!</string>
    <string name="app_ok">OK</string>
    <string name="choose_button">Choose A Name</string>
    <string name="delete_button">Delete</string>
    <string name="app_cancel">Cancel</string>
    <string name="app_delete">Delete Gifter</string>
    <string name="app_change_name">Change Name</string>
    <string name="app_yes">Yes</string>
    <string name="add_button">Add</string>
    <string name="reset_button">Reset</string>
    <string name="clear_button">Clear Names</string>
    <string name="hide_button">Hide Names</string>
    <string name="chosen_title">Chosen Name: </string>
    <string name="none">None</string>
    <string name="delete_confirm_title">Are you sure you want to delete this person?</string>
    <string name="clear_confirm_title">Are you sure you want to clear the entire list?</string>
    <string name="select_contact_button_name">Select Contact</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="title_playservicecheck">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="ad_unit_id">ca-app-pub-5797036756387487/1728241651</string>
    <string name="playservices">Google Play Services is not currently installed.  Select Yes to download from the Play Store.  Press cancel to exit application.  After Google Play Services has been installed you will need to restart the application</string>
    <string name="name_is_chosen">Chosen</string>

</resources>